# Chatbot_Vstatic

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  context.py  pyproject.toml  tool.py
static/chatbot/: app.js  index.html  styles.css  test_markdown.html
