[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.21.0",
    "certifi>=2026.1.4",
    "chromadb==1.3.5",
    "fastapi>=0.128.0",
    "gradio>=6.2.0",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "openai-agents>=0.6.5",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "sqlalchemy>=2.0.45",
    "sqlite-vec==0.1.6",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
    "langfuse>=2.0.0",
]
